[build-system]
requires = ["setuptools==82.0.1", "setuptools-scm==9.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "m3u8-extractor"
version = "1.1.0"
description = "Extract videos from web pages and download with yt-dlp"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "selenium==4.41.0",
    "yt-dlp==2026.3.17",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.6",
]

[project.scripts]
m3u8-extractor = "m3u8_extractor:main"

[tool.setuptools]
py-modules = ["m3u8_extractor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
